# chopf

./: .gitignore  README.md  pyproject.toml
examples/: controller_pod_async.py  controller_pod_random_error.py  controller_pod_sync.py  controller_repset.py  hello-repliaset.yaml  informer.py  store.py
src/chopf/: __init__.py  __main__.py  client.py  exceptions.py  invocation.py  leaderelection.py  source.py  tasks.py
src/chopf/builder/: __init__.py  _rbac.py
src/chopf/cache/: __init__.py  cache.py  events.py  index.py  informer.py  store.py
src/chopf/cli/: __init__.py  loaders.py
src/chopf/controller/: __init__.py  controller.py  request.py
src/chopf/examples/chaospod/: controller.py  resource.py
src/chopf/manager/: __init__.py  builders.py  manager.py
src/chopf/manager/controllers/: __init__.py  crd.py  lease.py  namespace.py
src/chopf/manager/observer/: namespace.py
src/chopf/manager/observers/: crd.py  namespace.py
src/chopf/resources/: __init__.py  crd.py  registry.py  resources.py  schema.py
src/chopf/workqueue/: __init__.py  limiters.py  queue.py
